--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,6 @@
+<% provide(:title, 'Contact') %>
 <div class="center hero-unit">
-<h1>Home App</h1>
+<h1>Contact App</h1>
 <h2>
 This is the home page for the
 <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
