--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 <section>
 <h1>
 <%= gravatar_for @user, "100x100" %>
-<%= @user.name %>
+<%= @user.name %> , <%= link_to user.email, user %>
 </h1>
 </section>
 </aside>
