--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,17 @@
 <section>
 <h1>
 <%= gravatar_for @user, "100x100" %>
-<%= @user.name %> , <%= link_to user.email, user %>
+<%= @user.name %> , <%= @user.email %>
 </h1>
 </section>
 </aside>
+<div class="span8">
+<% if @user.microposts.any? %>
+<h3>Microposts (<%= @user.microposts.count %>)</h3>
+<ol class="microposts">
+<%= render @microposts %>
+</ol>
+<%= will_paginate @microposts %>
+<% end %>
+</div>
 </div>
